--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
+<!DOCTYPE html>
 <html>
-　<head>
-　<title>我的第一個網頁</title> 
-　</head>
-　<body>歡迎光臨</body> 
+<head>
+<title>Eileen's </title>
+</head>
+<body style="background-color:#EAE5E5;">
+
+
+<p style="font-family:Trebuchet MS
+; font-size:43px"><b>Eileen Pei-Yu Chen</b></p>
+<p style="font-family:Trebuchet MS; font-size:18px">- A junior psychology major at NCKU</p>
+
+<img src="https://goo.gl/PJGAeL" alt="my profile pic" width="110" height="142">
+<br>
+<pre>
+<a style="font-size:160%;" href="https://www.facebook.com/eileen514630">My facebook</a>
+<a style="font-size:160%;" href="https://www.instagram.com/katieileench/">My Instagram</a>
+</pre>
+
+
+
+</body>
 </html>
