--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
 <html>
 <head>
 <title>Eileen's </title>
 </head>
-<body style="background-color:#EAE5E5;">
+<body>
 
 
-<p style="font-family:Trebuchet MS
-; font-size:43px"><b>Eileen Pei-Yu Chen</b></p>
-<p style="font-family:Trebuchet MS; font-size:18px">- A junior psychology major at NCKU</p>
+<div style="background-color:#EAE5E5;height:300px;width:668px">
+<p style="font-family:Trebuchet MS; font-size:43px;line-height:0.1% "><b>Eileen Pei-Yu Chen</b></p>
+<p style="font-family:Trebuchet MS; font-size:18px; line-height:0.1%">- A junior psychology major at NCKU</p>
 
 <img src="https://goo.gl/PJGAeL" alt="my profile pic" width="110" height="142">
 <br>
@@ -16,8 +15,14 @@
 <a style="font-size:160%;" href="https://www.facebook.com/eileen514630">My facebook</a>
 <a style="font-size:160%;" href="https://www.instagram.com/katieileench/">My Instagram</a>
 </pre>
+</div>
 
 
+<div id="content" style="background-color:#E83556;height:100px;width:668px">
+call contact follow me</div>
+
+<div id="footer" style="background-color:#EAE5E5;text-align:center;height:50px;width:668px"></div>
 
 </body>
 </html>
+
