--- a/index.html
+++ b/index.html
@@ -1,28 +1,57 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Eileen's </title>
+<style>
+<body> 
+div { 
+  background-color:#EAE5E5; 
+  width:500px; 
+  height:60px; 
+}
+
+h1 {
+    color: black;
+    font-family: Trebuchet MS;
+    font-size: 30pt;
+    position:absolute; 
+    top:130px; 
+    left:200px;
+
+}
+p  {
+    color: black;
+    font-family: Trebuchet MS;
+    font-size: 18pt;
+    position:absolute; 
+    top:190px; 
+    left:200px;
+}
+</style>
 </head>
 <body>
+<div style="background-color:#EAE5E5;height:780px;width:1350px">
+<h1>Eileen Pei-Yu Chen</h1>
+<p>- A junior psychology major at NCKU</p>
+<img src="https://goo.gl/PJGAeL" 
+style="position:absolute;top:270px;left:200px" 
+alt="my profile pic" width="250" height="260">
 
+<a style="font-size:160%;
+position:absolute;top:300px;left:500px" href="https://www.facebook.com/eileen514630">My facebook</a>
+<a style="font-size:160%;
+position:absolute;top:400px;left:500px" href="https://www.instagram.com/katieileench/">My Instagram</a>
 
-<div style="background-color:#EAE5E5;height:300px;width:1350px">
-<p style="font-family:Trebuchet MS; font-size:43px;line-height:0.1% "><b>Eileen Pei-Yu Chen</b></p>
-<p style="font-family:Trebuchet MS; font-size:18px; line-height:0.1%">- A junior psychology major at NCKU</p>
-
-<img src="https://goo.gl/PJGAeL" alt="my profile pic" width="110" height="142">
-<br>
-<pre>
-<a style="font-size:160%;" href="https://www.facebook.com/eileen514630">My facebook</a>
-<a style="font-size:160%;" href="https://www.instagram.com/katieileench/">My Instagram</a>
-</pre>
 </div>
 
 
-<div id="content" style="background-color:#E83556;height:100px;width:1350px">
+
+
+
+
+<div id="content" style="background-color:#E83556;height:135px;width:1350px">
 call contact follow me</div>
 
-<div id="footer" style="background-color:#EAE5E5;text-align:center;height:50px;width:1350px"></div>
+<div id="footer" style="background-color:#EAE5E5;text-align:center;height:86px;width:1350px"></div>
 
 </body>
 </html>
-
