--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ p  {
 <div style="background-color:#EAE5E5;height:780px;width:1350px">
 <h1>Eileen Pei-Yu Chen</h1>
 <p>- A junior psychology major at NCKU</p>
-<img src="https://goo.gl/PJGAeL" 
+<img src="https://goo.gl/84MWYR" 
 style="position:absolute;top:270px;left:200px" 
 alt="my profile pic" width="250" height="260">
 
@@ -42,16 +42,3 @@ position:absolute;top:300px;left:500px" href="https://www.facebook.com/eileen514
 position:absolute;top:400px;left:500px" href="https://www.instagram.com/katieileench/">My Instagram</a>
 
 </div>
-
-
-
-
-
-
-<div id="content" style="background-color:#E83556;height:135px;width:1350px">
-call contact follow me</div>
-
-<div id="footer" style="background-color:#EAE5E5;text-align:center;height:86px;width:1350px"></div>
-
-</body>
-</html>
