--- a/index.html
+++ b/index.html
@@ -18,27 +18,147 @@ h1 {
     left:200px;
 
 }
-p  {
+p1  {
     color: black;
     font-family: Trebuchet MS;
     font-size: 18pt;
     position:absolute; 
-    top:190px; 
+    top:210px; 
     left:200px;
 }
+p2  {
+    color: black;
+    font-family: Trebuchet MS;
+    font-size: 65pt;
+    position:absolute; 
+    top:325px; 
+    left:640px;
+}
+p3  {
+    color: black;
+    font-family: Trebuchet MS;
+    font-size: 30pt;
+    position:absolute; 
+    top:400px; 
+    left:640px;
+    white-space:nowrap
+}
+div {
+	margin: 0px 0;
+	width: 130px;
+	height: 10px;
+	line-height: 100px;
+	font-size: 12px;
+	font-weight: 90;
+    background-color: #E83556
+}
+.demo1 {
+	width: 120px;
+	height: 120px;
+	line-height: 200px;
+	border: 1px solid #E83556;
+	border-radius: 200px;
+    position:absolute; 
+    top:500px; 
+    left:640px;
+}
+p4  {
+    color: white;
+    font-family: Trebuchet MS;
+    font-size: 12pt;
+    position:absolute; 
+    top:516px; 
+    left:662px;
+    white-space:nowrap
+}
+
+
+.demo2 {
+	width: 120px;
+	height: 120px;
+	line-height: 200px;
+	border: 1px solid #61D0D4;
+	border-radius: 200px;
+    position:absolute; 
+    top:500px; 
+    left:780px;
+    background-color: #61D0D4
+}
+p5  {
+    color: white;
+    font-family: Trebuchet MS;
+    font-size: 12pt;
+    position:absolute; 
+    top:516px; 
+    left:808px;
+    white-space:nowrap
+}
+
+.demo3 {
+	width: 120px;
+	height: 120px;
+	line-height: 200px;
+	border: 1px solid #D1C926;
+	border-radius: 200px;
+    position:absolute; 
+    top:500px; 
+    left:920px;
+    background-color: #D1C926
+}
+p6  {
+    color: white;
+    font-family: Trebuchet MS;
+    font-size: 12pt;
+    position:absolute; 
+    top:516px; 
+    left:953px;
+    white-space:nowrap
+}
+
+
 </style>
 </head>
 <body>
 <div style="background-color:#EAE5E5;height:780px;width:1350px">
 <h1>Eileen Pei-Yu Chen</h1>
-<p>- A junior psychology major at NCKU</p>
+<p1>- Just a student</p1>
 <img src="https://goo.gl/84MWYR" 
-style="position:absolute;top:270px;left:200px" 
-alt="my profile pic" width="250" height="260">
+style="position:absolute;top:290px;left:200px" 
+alt="my profile pic" width="350" height="370">
+
+
+<p2>Hello,</p2>
+<p3>a bit about me:</p3>
+
+<div class="demo1"></div>
+<p4>MY RESUME</p4>
+
+<div class="demo2"></div>
+<p5>MY WORK</p5>
+
+<div class="demo3"></div>
+<p6>MY SKILL</p6>
 
 <a style="font-size:160%;
-position:absolute;top:300px;left:500px" href="https://www.facebook.com/eileen514630">My facebook</a>
+position:absolute;top:800px;left:300px" href="https://www.facebook.com/eileen514630">My facebook</a>
 <a style="font-size:160%;
-position:absolute;top:400px;left:500px" href="https://www.instagram.com/katieileench/">My Instagram</a>
+position:absolute;top:850px;left:300px" href="https://www.instagram.com/katieileench/">My Instagram</a>
+
+
+
+
 
 </div>
+
+<div style="background-color:#E83556;height:135px;width:1350px">
+</div>
+
+<div style="background-color:#EAE5E5;height:85px;width:1350px">
+</div>
+
+
+
+
+
+</body>
+</html>
