--- a/index.html
+++ b/index.html
@@ -131,22 +131,29 @@ alt="my profile pic" width="350" height="370">
 <p3>a bit about me:</p3>
 
 <div class="demo1"></div>
-<p4>MY RESUME</p4>
 
 <div class="demo2"></div>
-<p5>MY WORK</p5>
 
 <div class="demo3"></div>
-<p6>MY SKILL</p6>
 
+
+
+<style style="text/css">
+a{text-decoration:none;}
+a:hover{text-decoration:underline;}
+</style>
 <a style="font-size:160%;
 position:absolute;top:800px;left:300px" href="https://www.facebook.com/eileen514630">My facebook</a>
 <a style="font-size:160%;
 position:absolute;top:850px;left:300px" href="https://www.instagram.com/katieileench/">My Instagram</a>
 
 
-
-
+<a style="font-size:12pt;
+position:absolute;top:516px;left:662px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/resume">MY RESUME</a>
+<a style="font-size:12pt;
+position:absolute;top:516px;left:810px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/work">MY WORK</a>
+<a style="font-size:12pt;
+position:absolute;top:516px;left:947px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/skills">MY SKILLS</a>
 
 </div>
 
