--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@ p3  {
     font-family: Trebuchet MS;
     font-size: 30pt;
     position:absolute; 
-    top:400px; 
+    top:320px; 
     left:640px;
-    white-space:nowrap
+    white-space:nowrap;
+    letter-spacing:5px
 }
 div {
 	margin: 0px 0;
@@ -59,19 +60,9 @@ div {
 	border: 1px solid #E83556;
 	border-radius: 200px;
     position:absolute; 
-    top:500px; 
+    top:420px; 
     left:640px;
 }
-p4  {
-    color: white;
-    font-family: Trebuchet MS;
-    font-size: 12pt;
-    position:absolute; 
-    top:516px; 
-    left:662px;
-    white-space:nowrap
-}
-
 
 .demo2 {
 	width: 120px;
@@ -80,18 +71,9 @@ p4  {
 	border: 1px solid #61D0D4;
 	border-radius: 200px;
     position:absolute; 
-    top:500px; 
+    top:420px; 
     left:780px;
     background-color: #61D0D4
-}
-p5  {
-    color: white;
-    font-family: Trebuchet MS;
-    font-size: 12pt;
-    position:absolute; 
-    top:516px; 
-    left:808px;
-    white-space:nowrap
 }
 
 .demo3 {
@@ -101,18 +83,9 @@ p5  {
 	border: 1px solid #D1C926;
 	border-radius: 200px;
     position:absolute; 
-    top:500px; 
+    top:420px; 
     left:920px;
     background-color: #D1C926
-}
-p6  {
-    color: white;
-    font-family: Trebuchet MS;
-    font-size: 12pt;
-    position:absolute; 
-    top:516px; 
-    left:953px;
-    white-space:nowrap
 }
 
 
@@ -120,7 +93,7 @@ p6  {
 </head>
 <body>
 <div style="background-color:#EAE5E5;height:700px;width:1348px">
-<h1>Eileen Pei-Yu Chen</h1>
+<h1><a href="https://eileen514630.github.io/uidd2017/">Eileen Pei-Yu Chen</a></h1>
 <p1>- Just a student</p1>
 <img src="https://goo.gl/84MWYR" 
 style="position:absolute;top:220px;left:150px" 
@@ -136,29 +109,45 @@ alt="my profile pic" width="350" height="370">
 
 <div class="demo3"></div>
 
-
+<p style="color: gray;
+    font-family: Trebuchet MS;
+    font-size: 12pt;
+    position:absolute; 
+    top:520px; 
+    left:640px;white-space:nowrap">Hi there! I am Eileen. </p>
+<p style="color: gray;
+    font-family: Trebuchet MS;
+    font-size: 12pt;
+    position:absolute; 
+    top:545px; 
+    left:640px;white-space:nowrap">I am a junior student majoring in psychology.</p>
+<p style="color: gray;
+    font-family: Trebuchet MS;
+    font-size: 12pt;
+    position:absolute; 
+    top:570px; 
+    left:640px;white-space:nowrap">I am new to web programming.</p>
 
 <style style="text/css">
 a{text-decoration:none;}
 a:hover{text-decoration:underline;}
 </style>
-<a style="font-size:160%;
-position:absolute;top:800px;left:300px" href="https://www.facebook.com/eileen514630">My facebook</a>
-<a style="font-size:160%;
-position:absolute;top:850px;left:300px" href="https://www.instagram.com/katieileench/">My Instagram</a>
 
 
 <a style="font-size:12pt;
-position:absolute;top:516px;left:662px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/resume">MY RESUME</a>
+position:absolute;top:433px;left:662px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/resume">MY RESUME</a>
 <a style="font-size:12pt;
-position:absolute;top:516px;left:810px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/work">MY WORK</a>
+position:absolute;top:433px;left:810px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/work">MY WORK</a>
 <a style="font-size:12pt;
-position:absolute;top:516px;left:947px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/skills">MY SKILLS</a>
-
+position:absolute;top:433px;left:947px;color: white;white-space:nowrap;font-family: Trebuchet MS" href="https://eileen514630.github.io/uidd2017/skills">MY SKILLS</a>
 </div>
+
 
 <div style="background-color:#E83556;height:120px;width:1348px">
+<a style="font-size:160%;position:absolute;top:700px;left:10px" href="https://www.facebook.com/eileen514630">My facebook</a>
+<a style="font-size:160%;position:absolute;top:730px;left:10px" href="https://www.instagram.com/katieileench/">My Instagram</a>
 </div>
+
 
 <div style="background-color:#EAE5E5;height:60px;width:1348px">
 </div>
