edited Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@ footer {
       <div class="circle3"></div>
       
     <div class="explanation">
-			<p id="res">MY RESUME</p>
-      <p id="exp">MY EXPERIENCE</p>
-      <p id="ski">MY SKILLS</p>
+	  <p id="res"><a href="https://eileen514630.github.io/uidd2017/resume">MY RESUME</a></p>
+      <p id="exp"><a href="https://eileen514630.github.io/uidd2017/experience">MY EXPERIENCE</a></p>
+      <p id="ski"><a href="https://eileen514630.github.io/uidd2017/skills">MY SKILLS</a></p>
     </div>
 
     <div id="intro">
