--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ a.home:link {text-decoration:none;color:black}
 a.home:visited {text-decoration:none;color:black} 
 a.home:hover {text-decoration:underline;color:#A9A9A9}   
 
+a.explanation:link {text-decoration:none;color:white}    
+a.explanation:visited {text-decoration:none;color:white} 
+a.explanation:hover {text-decoration:underline;color:#A9A9A9}   
+
 h1 {
   font-size: 40pt;
   color: #4D4D4D;
