--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ footer {
       <div class="circle3"></div>
       
     <div class="explanation">
-	  <p id="res"><a href="https://eileen514630.github.io/uidd2017/resume">MY RESUME</a></p>
-      <p id="exp"><a href="https://eileen514630.github.io/uidd2017/experience">MY EXPERIENCE</a></p>
-      <p id="ski"><a href="https://eileen514630.github.io/uidd2017/skills">MY SKILLS</a></p>
+	  <p id="res"><a class="explanation" href="https://eileen514630.github.io/uidd2017/resume">MY RESUME</a></p>
+      <p id="exp"><a class="explanation" href="https://eileen514630.github.io/uidd2017/experience">MY EXPERIENCE</a></p>
+      <p id="ski"><a class="explanation" href="https://eileen514630.github.io/uidd2017/skills">MY SKILLS</a></p>
     </div>
 
     <div id="intro">
