--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@ footer {
       
     <div>
       <p id="res"><a class="explanation"  href="https://eileen514630.github.io/uidd2017/resume">MY RESUME</a></p>
-      <p id="exp"><a class="explanation"  href="https://eileen514630.github.io/uidd2017/resume">MY EXPERIENCE</a></p>
-      <p id="ski"><a class="explanation"  href="https://eileen514630.github.io/uidd2017/resume">MY SKILLS</a></p>
+      <p id="exp"><a class="explanation"  href="https://eileen514630.github.io/uidd2017/experience">MY EXPERIENCE</a></p>
+      <p id="ski"><a class="explanation"  href="https://eileen514630.github.io/uidd2017/skills">MY SKILLS</a></p>
     </div>
 
     <div id="intro">
